--- a/app/views/votes/results.html.erb
+++ b/app/views/votes/results.html.erb
@@ -2,9 +2,16 @@
 <div>
   <%= @results.first %>
 </div>
+<br>
+<h3> Votes Obtained </h3>
+<div>
+  <% @votings.each_pair do |candidate, count| %>
+    <%= "#{candidate} => #{count}" %><br>
+  <%end%>
+</div>
 <h4> People who have not voted </h4>
 <div>
   <% @cheaters.each do |cheater|%>
-    <%= cheater %>
+    <%= cheater %><br>
   <%end%>
 </div>
